--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-﻿"db.sqlite3" 
-"geckodriver.log" 
-"__pycache__" 
-"*.pyc" 
-"superlists/__pycache__/"
+﻿db.sqlite3
+geckodriver.log
+__pycache__
+*.pyc
+superlists/__pycache__/
